Fix overflow for slide

--- a/_sass/modules/_slider.scss
+++ b/_sass/modules/_slider.scss
@@ -3,6 +3,7 @@
 }
 
 .slide {
+  overflow: hidden;
   position: relative;
 
   @media screen and (max-width: $large-mobile-max) {
